# restaurantDB

./: .env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 64b650269262_initial.py
app/: crud.py  database.py  main.py  models.py  schemas.py
