[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application"
authors = ["msklnkk <128256503+msklnkk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
